[Add]Basic detail page logic

--- a/app.json
+++ b/app.json
@@ -1,5 +1,6 @@
 {
   "pages": ["pages/weekly/weekly",
+            "pages/detail/detail",
             "pages/about/about" ],
   "tabBar": {
     "list":[{
